--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URL="mongodb+srv://shuja:shuja@netstream.dabox70.mongodb.net/test"
+NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
+NEXTAUTH_SECRET="NEXT-SECRET"
