--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
