--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "lodash": "^4.17.21",
-    "next": "^13.2.4",
-    "next-auth": "^4.21.1",
+    "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "swr": "^2.0.3",
+    "swr": "^2.2.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -34,7 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8.4.35",
-    "prisma": "^4.10.1",
+    "prisma": "^5.11.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
